Revert "fix(core): labels wrap by default again (#642)"
This reverts commit c33fd90a279e23000eaa46befb671144ab6f272e.

--- a/crates/vizia_core/resources/themes/default_layout.css
+++ b/crates/vizia_core/resources/themes/default_layout.css
@@ -463,6 +463,7 @@ knob {
 
 label {
     size: auto;
+    text-wrap: false;
     direction: auto;
 }
 
